nim ES - can create good agent

--- a/lab2-nim-es/lab2_nim.ipynb
+++ b/lab2-nim-es/lab2_nim.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
     "\n",
     "    analysis = analize(state)\n",
     "    logging.debug(f\"analysis:\\n{pformat(analysis)}\")\n",
-    "    spicy_moves = [ply for ply, ns in analysis[\"possible_moves\"].items() if ns != 0]\n",
+    "    spicy_moves = [ply for ply, ns in analysis[\"possible_moves\"].items() if ns == 0]\n",
     "    if not spicy_moves:\n",
     "        spicy_moves = list(analysis[\"possible_moves\"].keys())\n",
     "    ply = random.choice(spicy_moves)\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,14 +287,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TEST\n",
-    "\n",
-    "Longest Nim Match is if every player takes away only one stick per turn -> numbersticks-1\n"
+    "# NIM ES\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,8 +303,9 @@
     "\n",
     "# game params\n",
     "NIM_DIM = 5\n",
+    "# Longest Nim Match is if every player takes away only one stick per turn -> numbersticks-1\n",
     "MAX_NUMBER_MOVES = sum([i * 2 + 1 for i in range(NIM_DIM)])\n",
-    "STRATEGIES = [pure_random, gabriele, adaptive1]\n",
+    "STRATEGIES = [pure_random, gabriele, adaptive1, optimal]\n",
     "NUMBER_STRATEGIES = len(STRATEGIES)\n",
     "\n",
     "# number on matches in fitness\n",
@@ -318,17 +317,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<function pure_random at 0x7eff4f9a7490>, <function adaptive1 at 0x7eff4f9a76d0>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function adaptive1 at 0x7eff4f9a76d0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function adaptive1 at 0x7eff4f9a76d0>, <function adaptive1 at 0x7eff4f9a76d0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function adaptive1 at 0x7eff4f9a76d0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>]\n",
+      "[<function adaptive1 at 0x7eff4f9a76d0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function adaptive1 at 0x7eff4f9a76d0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function optimal at 0x7eff4c120040>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function optimal at 0x7eff4c120040>, <function optimal at 0x7eff4c120040>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function gabriele at 0x7eff4c1728c0>, <function optimal at 0x7eff4c120040>]\n"
+     ]
+    }
+   ],
    "source": [
-    "def generate_random_agent():\n",
-    "    return [random.choice(STRATEGIES) for _ in range(MAX_NUMBER_MOVES)]"
+    "# some rnadomly generated agents already beat optimal??\n",
+    "\n",
+    "\n",
+    "def generate_random_agent_1():\n",
+    "    # no optimal\n",
+    "    return [random.choice(STRATEGIES[:-1]) for _ in range(MAX_NUMBER_MOVES)]\n",
+    "\n",
+    "\n",
+    "def generate_random_agent_2():\n",
+    "    # with small change to perform an optimal move\n",
+    "    return [\n",
+    "        random.choices(STRATEGIES, weights=[4, 4, 4, 1])[0]\n",
+    "        for _ in range(MAX_NUMBER_MOVES)\n",
+    "    ]\n",
+    "\n",
+    "\n",
+    "print(generate_random_agent_1())\n",
+    "print(generate_random_agent_2())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,46 +366,82 @@
     "        ply = strategy[player][number_moves](nim)\n",
     "        nim.nimming(ply)\n",
     "        player = 1 - player\n",
+    "        number_moves += 1\n",
     "\n",
-    "    return 1 - player  # 1 if agent won, 0 if expert won\n",
-    "\n",
-    "\n",
-    "# nim_match(EXPERT_AGENT,EXPERT_AGENT)"
+    "    # maybe can return 1, number of moves and it could evolve to win in less moves??\n",
+    "    return player, number_moves"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "import sys\n",
+    "from multiprocessing import Pool\n",
     "\n",
     "\n",
-    "def fitness(agent):\n",
+    "def fitness1(agent):\n",
+    "    # plays against expert by exectuing in order the moves of the agent and the expert agent\n",
+    "    # fitness is sum of (won match / number moves)\n",
+    "    with Pool() as pool:\n",
+    "        results = pool.map(\n",
+    "            nim_match, [agent] * FITNESS_MATCHES\n",
+    "        )  # [(victory,moves),...]\n",
+    "    return sum(\n",
+    "        [res[0] / res[1] for res in results]\n",
+    "    )  # optimizes for more aggressive moves ie less turns to win -> doesnt perform as well on final boss as fitness2\n",
+    "\n",
+    "\n",
+    "def fitness2(agent):\n",
     "    # plays against expert by exectuing in order the moves of the agent and the expert agent\n",
     "    # fitness is number of matches won by agent with max 10 matches\n",
-    "    runs = [nim_match(agent) for _ in range(FITNESS_MATCHES)]\n",
-    "    return sum(runs)"
+    "    with Pool() as pool:\n",
+    "        results = pool.map(\n",
+    "            nim_match, [agent] * FITNESS_MATCHES\n",
+    "        )  # [(victory,moves),...]\n",
+    "    return sum(\n",
+    "        [res[0] for res in results]\n",
+    "    )  # optimizes for more aggressive moves ie less turns to win\n",
+    "\n",
+    "\n",
+    "fitness = fitness2\n",
+    "\n",
+    "\n",
+    "# test\n",
+    "print(fitness(EXPERT_AGENT))\n",
+    "print(fitness([STRATEGIES[0]] * MAX_NUMBER_MOVES))  # rand\n",
+    "print(fitness([STRATEGIES[1]] * MAX_NUMBER_MOVES))  # gab\n",
+    "print(fitness([STRATEGIES[2]] * MAX_NUMBER_MOVES))  # adap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mutate(agent):\n",
     "    # swap two move strategies\n",
-    "    if random.random() < MUTATION_RATE:\n",
+    "    if random.randint(0, 1):\n",
     "        swap_index1, swap_index2 = random.sample(range(MAX_NUMBER_MOVES), 2)\n",
     "        agent[swap_index1], agent[swap_index2] = (\n",
     "            agent[swap_index2],\n",
     "            agent[swap_index1],\n",
     "        )\n",
-    "\n",
     "    # change one move strategy to another strategy\n",
-    "    if random.random() < MUTATION_RATE:\n",
+    "    else:\n",
     "        agent[random.randint(0, MAX_NUMBER_MOVES - 1)] = random.choice(STRATEGIES)\n",
     "\n",
     "    return agent"
@@ -389,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,61 +462,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# population = [generate_random_agent_1() for _ in range(POPULATION_SIZE)]  # no optimal -> dont work if all loses first gen (common) cause weights in random choices\n",
+    "\n",
+    "population = [\n",
+    "    generate_random_agent_2() for _ in range(POPULATION_SIZE)\n",
+    "]  # with small change to perform an optimal move"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Original -> ['adaptive1', 'gabriele', 'gabriele', 'pure_random', 'gabriele', 'adaptive1', 'adaptive1', 'gabriele', 'adaptive1', 'gabriele', 'gabriele', 'adaptive1', 'pure_random', 'adaptive1', 'pure_random', 'pure_random', 'gabriele', 'gabriele', 'adaptive1', 'adaptive1', 'pure_random', 'pure_random', 'pure_random', 'adaptive1', 'gabriele']\n",
-      "Fitness       -> 10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [05:36<00:00,  3.37s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Generation 0 - Best Fitness: 4 - Avg Fitness: 1.5\n",
+      "Generation 5 - Best Fitness: 7 - Avg Fitness: 2.65\n",
+      "Generation 10 - Best Fitness: 5 - Avg Fitness: 3.2\n",
+      "Generation 15 - Best Fitness: 5 - Avg Fitness: 2.6\n",
+      "Generation 20 - Best Fitness: 5 - Avg Fitness: 2.75\n",
+      "Generation 25 - Best Fitness: 6 - Avg Fitness: 2.4\n",
+      "Generation 30 - Best Fitness: 4 - Avg Fitness: 2.6\n",
+      "Generation 35 - Best Fitness: 5 - Avg Fitness: 2.65\n",
+      "Generation 40 - Best Fitness: 9 - Avg Fitness: 3.65\n",
+      "Generation 45 - Best Fitness: 8 - Avg Fitness: 4.4\n",
+      "Generation 50 - Best Fitness: 8 - Avg Fitness: 4.9\n",
+      "Generation 55 - Best Fitness: 8 - Avg Fitness: 4.9\n",
+      "Generation 60 - Best Fitness: 8 - Avg Fitness: 4.2\n",
+      "Generation 65 - Best Fitness: 7 - Avg Fitness: 4.75\n",
+      "Generation 70 - Best Fitness: 9 - Avg Fitness: 4.25\n",
+      "Generation 75 - Best Fitness: 8 - Avg Fitness: 5.1\n",
+      "Generation 80 - Best Fitness: 7 - Avg Fitness: 4.15\n",
+      "Generation 85 - Best Fitness: 7 - Avg Fitness: 3.95\n",
+      "Generation 90 - Best Fitness: 8 - Avg Fitness: 5.1\n",
+      "Generation 95 - Best Fitness: 7 - Avg Fitness: 4.85\n",
       "\n",
-      "Best Agent -> ['adaptive1', 'pure_random', 'pure_random', 'pure_random', 'gabriele', 'adaptive1', 'adaptive1', 'pure_random', 'gabriele', 'adaptive1', 'adaptive1', 'gabriele', 'pure_random', 'adaptive1', 'pure_random', 'pure_random', 'gabriele', 'adaptive1', 'adaptive1', 'adaptive1', 'gabriele', 'gabriele', 'pure_random', 'adaptive1', 'adaptive1']\n",
-      "Fitness    -> 10\n"
+      "Best Agent -> ['adaptive1', 'adaptive1', 'pure_random', 'optimal', 'adaptive1', 'adaptive1', 'gabriele', 'adaptive1', 'adaptive1', 'gabriele', 'gabriele', 'pure_random', 'adaptive1', 'adaptive1', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'adaptive1', 'gabriele', 'gabriele', 'pure_random']\n"
      ]
     }
    ],
    "source": [
-    "from tqdm import tqdm\n",
-    "\n",
-    "# run the algo\n",
-    "\n",
-    "population = [generate_random_agent() for _ in range(POPULATION_SIZE)]\n",
-    "\n",
-    "best_original = max(population, key=fitness)\n",
-    "print(\"Best Original ->\", [strat.__name__ for strat in best_original])\n",
-    "print(\"Fitness       ->\", fitness(best_original))\n",
-    "\n",
-    "\n",
-    "for generation in tqdm(range(NUMBER_GENERATIONS)):\n",
+    "for generation in range(NUMBER_GENERATIONS):\n",
     "    # evaluate current generation\n",
     "    fitness_scores = [fitness(agent) for agent in population]\n",
     "\n",
+    "    if generation % 5 == 0:\n",
+    "        max_fitness = max(fitness_scores)\n",
+    "        print(\n",
+    "            \"Generation\",\n",
+    "            generation,\n",
+    "            \"- Best Fitness:\",\n",
+    "            max_fitness,\n",
+    "            \"- Avg Fitness:\",\n",
+    "            np.mean(fitness_scores),\n",
+    "        )\n",
+    "\n",
     "    # next gen parents\n",
     "    selected_parents = random.choices(\n",
-    "        population, weights=fitness_scores, k=POPULATION_SIZE\n",
+    "        population, weights=fitness_scores, k=POPULATION_SIZE // 3\n",
     "    )\n",
     "\n",
     "    # create next gen\n",
     "    new_population = []\n",
     "    for i in range(POPULATION_SIZE):\n",
-    "        agent1 = random.choice(selected_parents)\n",
-    "        agent2 = random.choice(selected_parents)\n",
-    "        new_population.append(mutate(reproduce(agent1, agent2)))\n",
+    "        if random.random() < MUTATION_RATE:\n",
+    "            new_population.append(mutate(random.choice(selected_parents)))\n",
+    "        else:\n",
+    "            agent1 = random.choice(selected_parents)\n",
+    "            agent2 = random.choice(selected_parents)\n",
+    "            new_population.append(reproduce(agent1, agent2))\n",
     "\n",
     "    population = new_population\n",
     "\n",
@@ -464,27 +544,41 @@
     "best_agent = max(population, key=fitness)\n",
     "print()\n",
     "print(\"Best Agent ->\", [strat.__name__ for strat in best_agent])\n",
-    "print(\"Fitness    ->\", fitness(best_agent))"
+    "\n",
+    "# 5ish mins on i5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!FINAL BOSS!\n",
+      "1000 matches VS EXPERT AGENT\n",
+      "Evolved Agent -> 485 won!\n",
+      "Random Agent  -> 161 won!\n"
+     ]
     }
    ],
    "source": [
-    "nim_match(best_agent)"
+    "print(\"!FINAL BOSS!\\n1000 matches VS EXPERT AGENT\") # 30ish secs on i5\n",
+    "# if around 500 its basically as good as EXPERT AGENT\n",
+    "print(\n",
+    "    \"Evolved Agent ->\",\n",
+    "    sum([nim_match(best_agent)[0] for _ in range(1000)]),\n",
+    "    \"won!\",\n",
+    ")\n",
+    "\n",
+    "\n",
+    "print(\n",
+    "    \"Random Agent  ->\",\n",
+    "    sum([nim_match(generate_random_agent_2())[0] for _ in range(1000)]),\n",
+    "    \"won!\",\n",
+    ")"
    ]
   }
  ],
