--- a/lab2-nim-es/lab2_nim.ipynb
+++ b/lab2-nim-es/lab2_nim.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,18 +317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<function pure_random at 0x7eff4f9a7490>, <function adaptive1 at 0x7eff4f9a76d0>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function adaptive1 at 0x7eff4f9a76d0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function adaptive1 at 0x7eff4f9a76d0>, <function adaptive1 at 0x7eff4f9a76d0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function adaptive1 at 0x7eff4f9a76d0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>]\n",
-      "[<function adaptive1 at 0x7eff4f9a76d0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function adaptive1 at 0x7eff4f9a76d0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function optimal at 0x7eff4c120040>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function gabriele at 0x7eff4c1728c0>, <function pure_random at 0x7eff4f9a7490>, <function optimal at 0x7eff4c120040>, <function optimal at 0x7eff4c120040>, <function pure_random at 0x7eff4f9a7490>, <function pure_random at 0x7eff4f9a7490>, <function gabriele at 0x7eff4c1728c0>, <function gabriele at 0x7eff4c1728c0>, <function optimal at 0x7eff4c120040>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# some rnadomly generated agents already beat optimal??\n",
     "\n",
@@ -352,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,20 +365,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "0\n",
-      "0\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from multiprocessing import Pool\n",
     "\n",
@@ -428,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,38 +455,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generation 0 - Best Fitness: 4 - Avg Fitness: 1.5\n",
-      "Generation 5 - Best Fitness: 7 - Avg Fitness: 2.65\n",
-      "Generation 10 - Best Fitness: 5 - Avg Fitness: 3.2\n",
-      "Generation 15 - Best Fitness: 5 - Avg Fitness: 2.6\n",
-      "Generation 20 - Best Fitness: 5 - Avg Fitness: 2.75\n",
-      "Generation 25 - Best Fitness: 6 - Avg Fitness: 2.4\n",
-      "Generation 30 - Best Fitness: 4 - Avg Fitness: 2.6\n",
-      "Generation 35 - Best Fitness: 5 - Avg Fitness: 2.65\n",
-      "Generation 40 - Best Fitness: 9 - Avg Fitness: 3.65\n",
-      "Generation 45 - Best Fitness: 8 - Avg Fitness: 4.4\n",
-      "Generation 50 - Best Fitness: 8 - Avg Fitness: 4.9\n",
-      "Generation 55 - Best Fitness: 8 - Avg Fitness: 4.9\n",
-      "Generation 60 - Best Fitness: 8 - Avg Fitness: 4.2\n",
-      "Generation 65 - Best Fitness: 7 - Avg Fitness: 4.75\n",
-      "Generation 70 - Best Fitness: 9 - Avg Fitness: 4.25\n",
-      "Generation 75 - Best Fitness: 8 - Avg Fitness: 5.1\n",
-      "Generation 80 - Best Fitness: 7 - Avg Fitness: 4.15\n",
-      "Generation 85 - Best Fitness: 7 - Avg Fitness: 3.95\n",
-      "Generation 90 - Best Fitness: 8 - Avg Fitness: 5.1\n",
-      "Generation 95 - Best Fitness: 7 - Avg Fitness: 4.85\n",
-      "\n",
-      "Best Agent -> ['adaptive1', 'adaptive1', 'pure_random', 'optimal', 'adaptive1', 'adaptive1', 'gabriele', 'adaptive1', 'adaptive1', 'gabriele', 'gabriele', 'pure_random', 'adaptive1', 'adaptive1', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'adaptive1', 'gabriele', 'gabriele', 'pure_random']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for generation in range(NUMBER_GENERATIONS):\n",
     "    # evaluate current generation\n",
@@ -550,20 +501,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "!FINAL BOSS!\n",
-      "1000 matches VS EXPERT AGENT\n",
-      "Evolved Agent -> 485 won!\n",
-      "Random Agent  -> 161 won!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"!FINAL BOSS!\\n1000 matches VS EXPERT AGENT\") # 30ish secs on i5\n",
     "# if around 500 its basically as good as EXPERT AGENT\n",
@@ -579,6 +519,42 @@
     "    sum([nim_match(generate_random_agent_2())[0] for _ in range(1000)]),\n",
     "    \"won!\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LATEST RUN\n",
+    "```\n",
+    "Generation 0 - Best Fitness: 6 - Avg Fitness: 1.6\n",
+    "Generation 5 - Best Fitness: 8 - Avg Fitness: 4.35\n",
+    "Generation 10 - Best Fitness: 9 - Avg Fitness: 5.2\n",
+    "Generation 15 - Best Fitness: 9 - Avg Fitness: 5.65\n",
+    "Generation 20 - Best Fitness: 9 - Avg Fitness: 5.85\n",
+    "Generation 25 - Best Fitness: 8 - Avg Fitness: 4.95\n",
+    "Generation 30 - Best Fitness: 8 - Avg Fitness: 4.95\n",
+    "Generation 35 - Best Fitness: 8 - Avg Fitness: 5.35\n",
+    "Generation 40 - Best Fitness: 9 - Avg Fitness: 5.35\n",
+    "Generation 45 - Best Fitness: 7 - Avg Fitness: 4.35\n",
+    "Generation 50 - Best Fitness: 10 - Avg Fitness: 5.9\n",
+    "Generation 55 - Best Fitness: 7 - Avg Fitness: 5.05\n",
+    "Generation 60 - Best Fitness: 8 - Avg Fitness: 5.8\n",
+    "Generation 65 - Best Fitness: 8 - Avg Fitness: 5.15\n",
+    "Generation 70 - Best Fitness: 7 - Avg Fitness: 4.5\n",
+    "Generation 75 - Best Fitness: 8 - Avg Fitness: 5.4\n",
+    "Generation 80 - Best Fitness: 8 - Avg Fitness: 5.25\n",
+    "Generation 85 - Best Fitness: 8 - Avg Fitness: 4.7\n",
+    "Generation 90 - Best Fitness: 9 - Avg Fitness: 5.6\n",
+    "Generation 95 - Best Fitness: 8 - Avg Fitness: 5.55\n",
+    "\n",
+    "Best Agent -> ['adaptive1', 'adaptive1', 'adaptive1', 'pure_random', 'pure_random', 'pure_random', 'pure_random', 'adaptive1', 'adaptive1', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'adaptive1', 'pure_random', 'gabriele', 'gabriele', 'pure_random', 'pure_random', 'gabriele', 'gabriele', 'gabriele', 'pure_random', 'pure_random', 'gabriele']\n",
+    "\n",
+    "!FINAL BOSS!\n",
+    "1000 matches VS EXPERT AGENT\n",
+    "Evolved Agent -> 519 won!\n",
+    "Random Agent  -> 151 won!\n",
+    "```"
    ]
   }
  ],
