--- a/lab2-nim-es/lab2_nim.ipynb
+++ b/lab2-nim-es/lab2_nim.ipynb
@@ -454,6 +454,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Algorithm Strategy Description\n",
+    "\n",
+    "The algorithm follows a (1/3, 1)-ES strategy:\n",
+    "\n",
+    "- **Parent Selection (μ):** The top 1/3 of the population is selected as parents for the subsequent generation.\n",
+    "- **Reproduction (ρ):** It generates one offspring (either by mutation or recombination) per selected parent. This corresponds to the \"1\" in the (μ/ρ, λ) notation.\n",
+    "- **Population Update:** The algorithm creates a new population by either mutating a randomly selected parent with a certain probability or generating an offspring through reproduction (mating) between randomly chosen parents.\n",
+    "  \n",
+    "This strategy focuses on a balanced approach, leveraging the best solutions while exploring variations through mutation and recombination to iteratively update the population.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
