removed pool need check mac stuff

--- a/lab2-nim-es/lab2_nim.ipynb
+++ b/lab2-nim-es/lab2_nim.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,9 +317,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<function pure_random at 0x10874c3a0>, <function gabriele at 0x10874c700>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function pure_random at 0x10874c3a0>, <function gabriele at 0x10874c700>, <function gabriele at 0x10874c700>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>]\n",
+      "[<function optimal at 0x107a9f670>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function pure_random at 0x10874c3a0>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>, <function pure_random at 0x10874c3a0>, <function optimal at 0x107a9f670>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>]\n"
+     ]
+    }
+   ],
    "source": [
     "# some rnadomly generated agents already beat optimal??\n",
     "\n",
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,39 +374,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "from multiprocessing import Pool\n",
-    "\n",
-    "\n",
     "def fitness1(agent):\n",
     "    # plays against expert by exectuing in order the moves of the agent and the expert agent\n",
     "    # fitness is sum of (won match / number moves)\n",
-    "    with Pool() as pool:\n",
-    "        results = pool.map(\n",
-    "            nim_match, [agent] * FITNESS_MATCHES\n",
-    "        )  # [(victory,moves),...]\n",
-    "    return sum(\n",
-    "        [res[0] / res[1] for res in results]\n",
-    "    )  # optimizes for more aggressive moves ie less turns to win -> doesnt perform as well on final boss as fitness2\n",
-    "\n",
+    "    results = [nim_match(agent) for _ in range(FITNESS_MATCHES)]\n",
+    "    return sum([res[0] / res[1] for res in results]) \n",
     "\n",
     "def fitness2(agent):\n",
     "    # plays against expert by exectuing in order the moves of the agent and the expert agent\n",
     "    # fitness is number of matches won by agent with max 10 matches\n",
-    "    with Pool() as pool:\n",
-    "        results = pool.map(\n",
-    "            nim_match, [agent] * FITNESS_MATCHES\n",
-    "        )  # [(victory,moves),...]\n",
-    "    return sum(\n",
-    "        [res[0] for res in results]\n",
-    "    )  # optimizes for more aggressive moves ie less turns to win\n",
-    "\n",
+    "    results = [nim_match(agent) for _ in range(FITNESS_MATCHES)]\n",
+    "    return sum([res[0] for res in results])\n",
     "\n",
     "fitness = fitness2\n",
-    "\n",
     "\n",
     "# test\n",
     "print(fitness(EXPERT_AGENT))\n",
@@ -408,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,9 +474,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 0 - Best Fitness: 5 - Avg Fitness: 0.95\n",
+      "Generation 5 - Best Fitness: 5 - Avg Fitness: 2.1\n",
+      "Generation 10 - Best Fitness: 7 - Avg Fitness: 2.4\n",
+      "Generation 15 - Best Fitness: 5 - Avg Fitness: 2.05\n",
+      "Generation 20 - Best Fitness: 4 - Avg Fitness: 2.1\n",
+      "Generation 25 - Best Fitness: 5 - Avg Fitness: 2.55\n",
+      "Generation 30 - Best Fitness: 5 - Avg Fitness: 2.1\n",
+      "Generation 35 - Best Fitness: 5 - Avg Fitness: 2.55\n",
+      "Generation 40 - Best Fitness: 6 - Avg Fitness: 3.7\n",
+      "Generation 45 - Best Fitness: 7 - Avg Fitness: 3.45\n",
+      "Generation 50 - Best Fitness: 6 - Avg Fitness: 3.5\n",
+      "Generation 55 - Best Fitness: 6 - Avg Fitness: 3.1\n",
+      "Generation 60 - Best Fitness: 6 - Avg Fitness: 2.85\n",
+      "Generation 65 - Best Fitness: 5 - Avg Fitness: 3.05\n",
+      "Generation 70 - Best Fitness: 7 - Avg Fitness: 2.9\n",
+      "Generation 75 - Best Fitness: 6 - Avg Fitness: 3.0\n",
+      "Generation 80 - Best Fitness: 7 - Avg Fitness: 3.85\n",
+      "Generation 85 - Best Fitness: 6 - Avg Fitness: 3.35\n",
+      "Generation 90 - Best Fitness: 6 - Avg Fitness: 3.35\n",
+      "Generation 95 - Best Fitness: 5 - Avg Fitness: 3.35\n",
+      "\n",
+      "Best Agent -> ['adaptive1', 'pure_random', 'gabriele', 'optimal', 'gabriele', 'pure_random', 'pure_random', 'adaptive1', 'pure_random', 'optimal', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'adaptive1', 'adaptive1', 'adaptive1', 'optimal', 'adaptive1', 'pure_random', 'pure_random', 'pure_random', 'pure_random', 'pure_random', 'adaptive1']\n"
+     ]
+    }
+   ],
    "source": [
     "for generation in range(NUMBER_GENERATIONS):\n",
     "    # evaluate current generation\n",
@@ -516,9 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!FINAL BOSS!\n",
+      "1000 matches VS EXPERT AGENT\n",
+      "Evolved Agent -> 348 won!\n",
+      "Random Agent  -> 160 won!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"!FINAL BOSS!\\n1000 matches VS EXPERT AGENT\") # 30ish secs on i5\n",
     "# if around 500 its basically as good as EXPERT AGENT\n",
@@ -589,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
