200 gens 15 matches fitness

--- a/lab2-nim-es/lab2_nim.ipynb
+++ b/lab2-nim-es/lab2_nim.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# evolutionary params\n",
     "POPULATION_SIZE = 20\n",
     "MUTATION_RATE = 0.01\n",
-    "NUMBER_GENERATIONS = 100\n",
+    "NUMBER_GENERATIONS = 200\n",
     "\n",
     "# game params\n",
     "NIM_DIM = 5\n",
@@ -309,7 +309,7 @@
     "NUMBER_STRATEGIES = len(STRATEGIES)\n",
     "\n",
     "# number on matches in fitness\n",
-    "FITNESS_MATCHES = 10\n",
+    "FITNESS_MATCHES = 15\n",
     "\n",
     "# expert agent -> each move is optimal move\n",
     "EXPERT_AGENT = [optimal] * MAX_NUMBER_MOVES"
@@ -317,15 +317,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<function pure_random at 0x10874c3a0>, <function gabriele at 0x10874c700>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function pure_random at 0x10874c3a0>, <function gabriele at 0x10874c700>, <function gabriele at 0x10874c700>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>]\n",
-      "[<function optimal at 0x107a9f670>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function pure_random at 0x10874c3a0>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>, <function pure_random at 0x10874c3a0>, <function optimal at 0x107a9f670>, <function adaptive1 at 0x108769040>, <function pure_random at 0x10874c3a0>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>, <function gabriele at 0x10874c700>, <function adaptive1 at 0x108769040>]\n"
+      "[<function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function adaptive1 at 0x103a5af70>, <function adaptive1 at 0x103a5af70>, <function adaptive1 at 0x103a5af70>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function adaptive1 at 0x103a5af70>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function pure_random at 0x103a5ab80>, <function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function gabriele at 0x103a5aaf0>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function gabriele at 0x103a5aaf0>]\n",
+      "[<function pure_random at 0x103a5ab80>, <function gabriele at 0x103a5aaf0>, <function optimal at 0x12884e700>, <function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function optimal at 0x12884e700>, <function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function optimal at 0x12884e700>, <function adaptive1 at 0x103a5af70>, <function pure_random at 0x103a5ab80>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>]\n"
      ]
     }
    ],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,14 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
+      "7\n",
       "0\n",
       "0\n",
       "0\n"
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,35 +474,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0 - Best Fitness: 5 - Avg Fitness: 0.95\n",
-      "Generation 5 - Best Fitness: 5 - Avg Fitness: 2.1\n",
-      "Generation 10 - Best Fitness: 7 - Avg Fitness: 2.4\n",
-      "Generation 15 - Best Fitness: 5 - Avg Fitness: 2.05\n",
-      "Generation 20 - Best Fitness: 4 - Avg Fitness: 2.1\n",
-      "Generation 25 - Best Fitness: 5 - Avg Fitness: 2.55\n",
-      "Generation 30 - Best Fitness: 5 - Avg Fitness: 2.1\n",
-      "Generation 35 - Best Fitness: 5 - Avg Fitness: 2.55\n",
-      "Generation 40 - Best Fitness: 6 - Avg Fitness: 3.7\n",
-      "Generation 45 - Best Fitness: 7 - Avg Fitness: 3.45\n",
-      "Generation 50 - Best Fitness: 6 - Avg Fitness: 3.5\n",
-      "Generation 55 - Best Fitness: 6 - Avg Fitness: 3.1\n",
-      "Generation 60 - Best Fitness: 6 - Avg Fitness: 2.85\n",
-      "Generation 65 - Best Fitness: 5 - Avg Fitness: 3.05\n",
-      "Generation 70 - Best Fitness: 7 - Avg Fitness: 2.9\n",
-      "Generation 75 - Best Fitness: 6 - Avg Fitness: 3.0\n",
-      "Generation 80 - Best Fitness: 7 - Avg Fitness: 3.85\n",
-      "Generation 85 - Best Fitness: 6 - Avg Fitness: 3.35\n",
-      "Generation 90 - Best Fitness: 6 - Avg Fitness: 3.35\n",
-      "Generation 95 - Best Fitness: 5 - Avg Fitness: 3.35\n",
+      "Generation 0 - Best Fitness: 7 - Avg Fitness: 2.25\n",
+      "Generation 5 - Best Fitness: 10 - Avg Fitness: 5.75\n",
+      "Generation 10 - Best Fitness: 12 - Avg Fitness: 9.05\n",
+      "Generation 15 - Best Fitness: 12 - Avg Fitness: 9.25\n",
+      "Generation 20 - Best Fitness: 12 - Avg Fitness: 9.75\n",
+      "Generation 25 - Best Fitness: 11 - Avg Fitness: 8.95\n",
+      "Generation 30 - Best Fitness: 12 - Avg Fitness: 8.65\n",
+      "Generation 35 - Best Fitness: 12 - Avg Fitness: 7.65\n",
+      "Generation 40 - Best Fitness: 12 - Avg Fitness: 9.15\n",
+      "Generation 45 - Best Fitness: 11 - Avg Fitness: 7.55\n",
+      "Generation 50 - Best Fitness: 9 - Avg Fitness: 7.25\n",
+      "Generation 55 - Best Fitness: 11 - Avg Fitness: 7.6\n",
+      "Generation 60 - Best Fitness: 9 - Avg Fitness: 7.3\n",
+      "Generation 65 - Best Fitness: 11 - Avg Fitness: 7.6\n",
+      "Generation 70 - Best Fitness: 10 - Avg Fitness: 6.55\n",
+      "Generation 75 - Best Fitness: 9 - Avg Fitness: 6.75\n",
+      "Generation 80 - Best Fitness: 12 - Avg Fitness: 7.75\n",
+      "Generation 85 - Best Fitness: 12 - Avg Fitness: 7.0\n",
+      "Generation 90 - Best Fitness: 12 - Avg Fitness: 8.1\n",
+      "Generation 95 - Best Fitness: 11 - Avg Fitness: 7.7\n",
+      "Generation 100 - Best Fitness: 11 - Avg Fitness: 7.35\n",
+      "Generation 105 - Best Fitness: 11 - Avg Fitness: 7.5\n",
+      "Generation 110 - Best Fitness: 12 - Avg Fitness: 7.6\n",
+      "Generation 115 - Best Fitness: 11 - Avg Fitness: 7.35\n",
+      "Generation 120 - Best Fitness: 9 - Avg Fitness: 6.65\n",
+      "Generation 125 - Best Fitness: 10 - Avg Fitness: 6.65\n",
+      "Generation 130 - Best Fitness: 10 - Avg Fitness: 6.6\n",
+      "Generation 135 - Best Fitness: 11 - Avg Fitness: 6.7\n",
+      "Generation 140 - Best Fitness: 10 - Avg Fitness: 6.7\n",
+      "Generation 145 - Best Fitness: 9 - Avg Fitness: 5.95\n",
+      "Generation 150 - Best Fitness: 10 - Avg Fitness: 7.45\n",
+      "Generation 155 - Best Fitness: 10 - Avg Fitness: 7.05\n",
+      "Generation 160 - Best Fitness: 9 - Avg Fitness: 6.05\n",
+      "Generation 165 - Best Fitness: 9 - Avg Fitness: 6.35\n",
+      "Generation 170 - Best Fitness: 11 - Avg Fitness: 6.85\n",
+      "Generation 175 - Best Fitness: 11 - Avg Fitness: 6.4\n",
+      "Generation 180 - Best Fitness: 11 - Avg Fitness: 6.5\n",
+      "Generation 185 - Best Fitness: 13 - Avg Fitness: 6.7\n",
+      "Generation 190 - Best Fitness: 10 - Avg Fitness: 6.25\n",
+      "Generation 195 - Best Fitness: 9 - Avg Fitness: 6.5\n",
       "\n",
-      "Best Agent -> ['adaptive1', 'pure_random', 'gabriele', 'optimal', 'gabriele', 'pure_random', 'pure_random', 'adaptive1', 'pure_random', 'optimal', 'gabriele', 'pure_random', 'gabriele', 'pure_random', 'adaptive1', 'adaptive1', 'adaptive1', 'optimal', 'adaptive1', 'pure_random', 'pure_random', 'pure_random', 'pure_random', 'pure_random', 'adaptive1']\n"
+      "Best Agent -> ['pure_random', 'pure_random', 'pure_random', 'adaptive1', 'gabriele', 'gabriele', 'gabriele', 'adaptive1', 'adaptive1', 'optimal', 'gabriele', 'gabriele', 'pure_random', 'adaptive1', 'adaptive1', 'gabriele', 'gabriele', 'adaptive1', 'optimal', 'gabriele', 'optimal', 'gabriele', 'optimal', 'pure_random', 'gabriele']\n"
      ]
     }
    ],
@@ -549,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -558,8 +578,8 @@
      "text": [
       "!FINAL BOSS!\n",
       "1000 matches VS EXPERT AGENT\n",
-      "Evolved Agent -> 348 won!\n",
-      "Random Agent  -> 160 won!\n"
+      "Evolved Agent -> 402 won!\n",
+      "Random Agent  -> 179 won!\n"
      ]
     }
    ],
@@ -578,42 +598,6 @@
     "    sum([nim_match(generate_random_agent_2())[0] for _ in range(1000)]),\n",
     "    \"won!\",\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### LATEST RUN\n",
-    "```\n",
-    "Generation 0 - Best Fitness: 6 - Avg Fitness: 1.6\n",
-    "Generation 5 - Best Fitness: 8 - Avg Fitness: 4.35\n",
-    "Generation 10 - Best Fitness: 9 - Avg Fitness: 5.2\n",
-    "Generation 15 - Best Fitness: 9 - Avg Fitness: 5.65\n",
-    "Generation 20 - Best Fitness: 9 - Avg Fitness: 5.85\n",
-    "Generation 25 - Best Fitness: 8 - Avg Fitness: 4.95\n",
-    "Generation 30 - Best Fitness: 8 - Avg Fitness: 4.95\n",
-    "Generation 35 - Best Fitness: 8 - Avg Fitness: 5.35\n",
-    "Generation 40 - Best Fitness: 9 - Avg Fitness: 5.35\n",
-    "Generation 45 - Best Fitness: 7 - Avg Fitness: 4.35\n",
-    "Generation 50 - Best Fitness: 10 - Avg Fitness: 5.9\n",
-    "Generation 55 - Best Fitness: 7 - Avg Fitness: 5.05\n",
-    "Generation 60 - Best Fitness: 8 - Avg Fitness: 5.8\n",
-    "Generation 65 - Best Fitness: 8 - Avg Fitness: 5.15\n",
-    "Generation 70 - Best Fitness: 7 - Avg Fitness: 4.5\n",
-    "Generation 75 - Best Fitness: 8 - Avg Fitness: 5.4\n",
-    "Generation 80 - Best Fitness: 8 - Avg Fitness: 5.25\n",
-    "Generation 85 - Best Fitness: 8 - Avg Fitness: 4.7\n",
-    "Generation 90 - Best Fitness: 9 - Avg Fitness: 5.6\n",
-    "Generation 95 - Best Fitness: 8 - Avg Fitness: 5.55\n",
-    "\n",
-    "Best Agent -> ['adaptive1', 'adaptive1', 'adaptive1', 'pure_random', 'pure_random', 'pure_random', 'pure_random', 'adaptive1', 'adaptive1', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'adaptive1', 'pure_random', 'gabriele', 'gabriele', 'pure_random', 'pure_random', 'gabriele', 'gabriele', 'gabriele', 'pure_random', 'pure_random', 'gabriele']\n",
-    "\n",
-    "!FINAL BOSS!\n",
-    "1000 matches VS EXPERT AGENT\n",
-    "Evolved Agent -> 519 won!\n",
-    "Random Agent  -> 151 won!\n",
-    "```"
    ]
   }
  ],
